# ChangeLog for sys-process/glances
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.3 2013/02/02 17:32:28 floppym Exp $

  02 Feb 2013; Mike Gilbert <floppym@gentoo.org> glances-1.4.2.1.ebuild,
  glances-1.4.ebuild:
  Depend on setuptools at build and run time. Bug 455044 by cutchyacokov.

*glances-1.4.2.1 (06 Oct 2012)

  06 Oct 2012; Justin Lecher <jlec@gentoo.org> +glances-1.4.2.1.ebuild,
  metadata.xml:
  Version bump, optional for HTML export

*glances-1.4 (05 Sep 2012)

  05 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> +glances-1.4.ebuild,
  +metadata.xml:
  Initial import. Ebuild based on work of Weonbin <timid3000@gmail.com> and
  Marcin Rataj <m@lidel.org>. Fixes #397731