@@ -1,16 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST glances-1.4.2.1.tar.gz 614535 SHA256 5caf1492413093ecc12dc8d2740e3a7e4ba72378f054e28a433666e1b16849c8 SHA512 531f0132030c18da4798800ab7f43ac112a2c74f6ea6a55fe683341766ae700c1825130c190970722e58d1f056f9ca9dd9c0191f5f99d59b996e1e78be149b54 WHIRLPOOL 3355462b33a9f8d9bbb80676f3d518d49a956d72311097567e884ab776813d135ca46af959e0dd68f9fdc7da20f4d3adf5c7902a830a6dbb732a5c048afe4515
-DIST glances-1.4.tar.gz 830336 SHA256 71487de7bfb143a0a730827d5306ac24ab98c79799ceecf6d35a400fa7130345 SHA512 d5bcfa801adc6b7bb38ba60c78c09980a2d2bfed8cbde15fa0783819607de80270afa9ebadc5c56595f426be1dc19084deebff8c3346dc35e61fdd731309a9f4 WHIRLPOOL 3a1e3a21879e154caa807b718812b1f6b80d422782407ad074adb62042016159bf148a19ff127e15d67586d6b251c3e358a189191999cc50d839448e9ba44840
-EBUILD glances-1.4.2.1.ebuild 839 SHA256 39e37e6d5d3409058c13655db1a786ca386ca7d2f0efe0518bf7423788a3671d SHA512 2c7e65093af870b5111fa950244b02795bb388f6fbabfd672348f1bfb02e0643992f64f254aff3cd7ec953d38edc006226e4962bdda503aab4b14b8612229465 WHIRLPOOL 41e84c543d3954b5dca741b7c4861f1bb3d40f34fa8f0add897fca107e6d4e11a8ae0b05bd43d826093009e66a6b08046483d2be7f6cb3c608d5dcc9feec6297
-EBUILD glances-1.4.ebuild 795 SHA256 ad5912e479ac205fca8e1bf8a9f284d0703eb43bb73ea9abc56ecb156d9eeade SHA512 bfbe30f8be0ee82bf280fa815bebbaae4a24cec64a38d3f597dc772cf96f1eaa2a5267a7a101005542c8785ada95ac13d72f93983c0233324615340383bd4b6a WHIRLPOOL 4cb59f3965d2d3a7258e0b32146fe76ba17d7b44db739c4bc5a7f91f124ed53674bcd5d8b52a4e1c47d5e40064f68c95406db9ff35f33fd60cfb29f19385c25b
-MISC ChangeLog 784 SHA256 7322c4d59b390addb083a01794bb55f7898d6b2e1bf83fc6eb8d07cd7a324209 SHA512 2416c9dd4a2f638f7bdb8d59893d8526e6bebb25a4d90184258bebbafa7801f3f697ff29c37f382bf350dbecc4c74b5e984574759e79e60a3dd00f116a55b774 WHIRLPOOL faf91a8283fc47f8842d58a62c1111576091c2ea62920dc935f42acccf4e8cc9adc57ed94b3d898cad5a74a2f96484a07ed6143a30cc5e1bfb55d276dd283e19
-MISC metadata.xml 325 SHA256 dc09978d20dee24660cdc234e417873094dbf48397ce2b22fce52872b194ee9d SHA512 6d7109161830a39e1ae58ebc18dc55b1a47547405368de1d5545d217e4cd981d2f8d7c60a9e40b6f00288fa896e892b8fe81b46cb237a648ab142501ae855b3f WHIRLPOOL de8bcbb0bbab6cd47585c469a543ff7cd19c8d21f3486fa2ac32f71d4efcd1e9178769bd1f4a2a87f15a09756568c9a2146f58a389b0da651a7aa70d7917ffbb
+DIST glances-1.6.tar.gz 632990 SHA256 b5c6f97a047341b3fdec0c02b8201efbd0e2b1c09a7cdbde593a84bf1ce32814 SHA512 166cbdaf01e4ba5095982f64f5515141bc6d52e41bba0d991ef8684deced25209ef581ffbea800d9c0ea9a68d75aed61f2357b626688486cb3b0450517e75279 WHIRLPOOL 91559d2e10687f584f8bc9e1ca00ca99727e3882b428a42ed428565615a70c80030dbddc76d7573a3b386b39c39c704a4c0e535c24aef36cf8a056c31aca1f22
+EBUILD glances-1.6.ebuild 1147 SHA256 2dae8ae1f1e2fd16a4f1134ee206f7cd5d0fe6a5392705e2fb63f1358f4df656 SHA512 e751e399adfb403d3dfaeecc1adfb7f1d0af5b764a6ed5346f47e15c8659cf7f029a6eb6cbb5fb56a9f39726c30762a4ecd552932f0d0e492e28b9dc5621f086 WHIRLPOOL e109b4ad8f394ae6558d3da46b68606ac084a80a059ecf5ed19e4cf18a196518d7c67b51a3dddd12371250aef9dbf7b95a4904cf7147262b0a328e077e5ab4c3
+MISC ChangeLog 1074 SHA256 2cb71dd8ab06485d033470438b7ba64d9b497b87364a5d3d7222afc4894bd535 SHA512 f8005f7f74496e9699e52a73e8a64f8564538c56d2414cb896ecedfb6479dbd21818aa4a5a5a356d6e1f96b959c46e3d5dd358a94888c26fb5cee3a2bc5cb056 WHIRLPOOL eff2b3d91bae3baf1357a14ff6163d68c0e975f166e46aa63f9eabb9472add2adf29b5d7fd153ff53ecca809f084cea6ec5838cf244cceb5d58d4e057c405560
+MISC metadata.xml 258 SHA256 28ad63518739e649db94f74367681857f3a6d143abd84600604ac021d4e0d72e SHA512 845ca81c0cc1acdb26455c6225f79419bd1a4f4dc147214749a341d86f98e3122c15600b974e2c30e3cce9c391c08f9c60bef583f7a40452d5a4662395f77ab9 WHIRLPOOL 6a6fb10cc4d2d3b237fff30eb4c40933ddfc83947f4b4d2fe59023c7fbe4c7a991f5948035ac61c13ff9a929fa7a8b712417ff5df9d4c876785017d9dc114850
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlENTa0ACgkQC77qH+pIQ6QZ9AEAiCENuxNB7ZkNEYDu+3LNhUmK
-dl+vMMC9LCDgO3FNtHgBAJkGp6tT17jDlyELOlchIyWr3dh8XvxLxf9LxqmvKjKn
-=AM/2
+iQIcBAEBCAAGBQJRDVWMAAoJEF0huFKJUZL5La0P/RPQK9uk5jKGBlH7Kmxf8IqV
+siHsPqH78nouPkEWY3LER9yI8NocPr3vBuhzMtQmU1g2dazhVtzlgvh6IdIa0Nj9
+oI2wEeZukVeH/H62mKv2KeNyBvpXpxKz2DfTy8p3ARe0MKDgaLAaSDcv1nDf8Qxd
+DVaLUEWCEFwNnxkb95Jg+vqwETWUh4ni6rehlRAyaYRFVvzoW/ciG1GECLF8dejI
+Gfm+qnclzx+sF0dZJIsbwtw/rD9XOgFU8dnoh8h80ZixgshGc7ZK+wpwNOGtYzzb
+bilqdaN77mLaVyz03d2U1sowvjtEoFN5iTloJshEzyxvbYFEmRUTK6+6PBBvmiWM
+FWVZyh+BX231SGI1arm/9lVOTs0iWv5vVOAAZ9rg1cr57A+UhYZY5i3YvydwHT+U
+lxV/vueVkADufbigpuSAssGOxcBjzpEU8frWMIxRZPaA6oErfG6dz2irR51FKfgI
+Iaryd3VrEDt+j3pnHBmQMbbICzQ27QYddF99jnB6Bhf7NKOpJX1aX8FXhdSzKyKh
+aXOk/T7bSnbT/GTXQgz9Zqbenov8pShWRZAGMWomwZdhkMVMbKy+uXUY3XDAVrsY
+YER7ZFx+Dj/LU/IgrCjEw3jXGYVn7CyENQcVQfSnsmDJA75M6P2HZtYhTXze7JGO
+krPiUBvftblx5lIaGUa/
+=3bGk
 -----END PGP SIGNATURE-----
