@@ -1,6 +1,13 @@
 # ChangeLog for sys-process/glances
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.3 2013/02/02 17:32:28 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/glances/ChangeLog,v 1.4 2013/02/02 18:05:57 xarthisius Exp $
+
+*glances-1.6 (02 Feb 2013)
+
+  02 Feb 2013; Kacper Kowalik <xarthisius@gentoo.org> +glances-1.6.ebuild,
+  -glances-1.4.2.1.ebuild, -glances-1.4.ebuild, metadata.xml:
+  Version bump, drop old. Add dependency on dev-python/setuptools wrt #455044 by
+  cutchyacokov <cutchyacokov@gmail.com>
 
   02 Feb 2013; Mike Gilbert <floppym@gentoo.org> glances-1.4.2.1.ebuild,
   glances-1.4.ebuild:
